--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
     <div id="mySidebar" class="sidebar">
       <a href="javascript:void(0)" class="close-btn" onclick="closeSidebar()">&times;</a>
       <a href="/">Home</a>
-      <a href="/minigame"><i class="fas fa-gamepad me-2"></i>Minigame</a>
+      <a href="/minigame">Minigame</a>
       <a href="#">About</a>
       <a href="#">Report Issue</a>
     </div>
