--- a/app/assets/stylesheets/pages/_index_page.scss
+++ b/app/assets/stylesheets/pages/_index_page.scss
@@ -30,14 +30,17 @@
 .badge-paid {
   background-color: #6b7280;
 }
-.badge-flinta-friendly {
+.badge-accessible {
 background-color: #b833ff;
 }
-.badge-handycap-friendly {
+.badge-handicap-friendly {
 background-color: #33d7ff;
 }
-.badge-family-bathroom {
+.badge-family-friendly {
 background-color: #ffac33;
+}
+.badge-well-located {
+background-color: #5833ff;
 }
 .btn-link {
 background-color: #1e3a8a;
