resized cards size

--- a/app/views/toilets/index.html.erb
+++ b/app/views/toilets/index.html.erb
@@ -101,7 +101,7 @@
         <%= link_to toilet_path(toilet), class: "card-frame" do %>
           <div class="mt-3">
               <div class="card mb-3">
-                  <div class="card-body">
+                  <div class="card-body" style="height: 140px">
                       <div class="d-flex justify-content-between">
                           <div>
                               <h5 class="card-title"><%=toilet.name%></h5>
